# jmax

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  jmax.sln
jmax/: TODO.txt  bind.cpp  bind.h  bind.hpp  bt3zqmvv.sy1~  camera.cpp  camera.hpp  engine.cpp  engine.cpp~  engine.hpp  engine.hpp~  fps.cpp  fps.h  handler.cpp  handler.h  handler.hpp  handler.hpp~  jmax.cpp  jmax.h  jmax.hpp  jmax.vcxproj  jmax.vcxproj.filters  load.cpp  load.h  load.hpp  loadMtlFile.cpp  loadObjFile.cpp  loadOffFile.cpp  main.cpp  material.cpp  material.h  material.hpp  math.cpp  math.h  math.hpp  mesh.cpp  mesh.h  model.cpp  model.h  model.hpp  (+4 more)
jmax/Debug/: jmax.vcxprojResolveAssemblyReference.cache
jmax/Debug/jmax.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  jmax.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
jmax/Release/jmax.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  jmax.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
